--- a/react-projekt/public/index.html
+++ b/react-projekt/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2O3tYXxyC3WNpEkLkED5mUdl6loN3B+SRJbZG3fMoa5gRl5TykF3WXZ1T4KUnwUpzQkz4og==" crossorigin=""/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
